--- a/app/assets/javascripts/views/layouts/navbar.html.erb
+++ b/app/assets/javascripts/views/layouts/navbar.html.erb
@@ -8,10 +8,30 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><%= I18n.t "web_name" %></a>
+      <a class="navbar-brand" ui-sref="home"><%= I18n.t "app_name" %></a>
     </div>
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav navbar-right">
+        <li ng-if="!signedIn()">
+          <%= link_to I18n.t("navbar.login_with_google"),
+            user_google_oauth2_omniauth_authorize_path %>
+        </li>
+        <li class="dropdown" ng-if="signedIn()">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+            aria-haspopup="true" aria-expanded="false">
+            {{ user.username }} <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li><a href="#"><%= I18n.t "navbar.profile" %></a></li>
+            <li><a href="#"><%= I18n.t "navbar.setting" %></a></li>
+            <li role="separator" class="divider"></li>
+            <li>
+              <a ng-click="logout()" href="#">
+                <%= I18n.t "navbar.logout" %>
+              </a>
+            </li>
+          </ul>
+        </li>
       </ul>
     </div>
   </div>
