--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= t "web_name" %></title>
+    <title><%= t "app_name" %> - <%= t "slogan" %></title>
     <%= stylesheet_link_tag "application", media: "all",
       "data-turbolinks-track": true %>
     <%= javascript_include_tag "application" %>
