--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title><%= t "app_name" %> - <%= t "slogan" %></title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
     <%= stylesheet_link_tag "application", media: "all" %>
     <%= csrf_meta_tags %>
     <meta name="base" content="<%= root_path %>api/v1/">
