--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -3,8 +3,16 @@ $secondary-color: #FFFFFF;
 $accent-color: #FFCD1F;
 /* universal */
 body {
+  height: auto;
   font-family: 'Roboto', sans-serif;
   background-color: #F0F0F0;
+  .md-toast-animating {
+    overflow: auto !important;
+  }
+  md-toast{
+    position: fixed!important;
+    right: 10px!important;
+  }
 }
 
 /* footer */
@@ -33,25 +41,25 @@ footer {
     }
   }
 }
-navbar{
-  .navbar-default{
+
+navbar {
+  .navbar-default {
     padding: 15px 0;
     border: none;
     border-radius: 0;
     background-color: $primary-color;
     .navbar-brand, .navbar-nav > li > a {
-      color: $secondary-color!important;
+      color: $secondary-color !important;
       font-weight: bold;
     }
-    .open > a{
-      background-color: $primary-color!important;
+    .open > a {
+      background-color: $primary-color !important;
     }
-    .open > a:hover{
-      background-color: $primary-color!important;
+    .open > a:hover {
+      background-color: $primary-color !important;
     }
   }
 }
-
 
 .custom-list {
   .custom-list-item {
@@ -60,54 +68,81 @@ navbar{
     margin-bottom: 20px;
     border-radius: 2px;
     h5 {
+      color: gray;
       margin-top: 20px;
-      padding-left: 40px;
+      padding-left: 30px;
     }
     h2 {
-      font-weight: bolder;
+      font-family: "Helvetica Neue", "Arial", sans-serif;
+      font-weight: bold;
       margin-top: 0;
+      font-size: 22px;
       i {
+        padding-right: 20px;
         color: #C0CACE;
       }
     }
-    .border-left{
+    .border-left {
       border-left: 2px solid #fafafa;
     }
-    .word{
+    .word {
       height: 50px;
       line-height: 50px;
     }
-    .action{
+    .action {
       padding-top: 6px;
+    }
+    .more{
+      color: #C0CACE;
+      padding-top: 25px;
+    }
+    .more:hover{
+      color: #FFFFFF;
     }
   }
   .custom-list-item:hover {
     transition: 0.5s;
     border-bottom: 5px solid $accent-color;
   }
+  .fa-code-fork{
+    color: gray;
+  }
 }
 
-.sidebar{
+.sidebar {
+  min-height: 100%;
   background-color: $secondary-color;
   box-shadow: 0 9px 0 0 white, 0 -9px 0px 0px white,
-    12px 0 15px -4px rgba(192, 202, 206, 0.8),
-    -12px 0 15px -4px rgba(192, 202, 206, 0.8);
-  .heading a{
+  12px 0 15px -4px rgba(192, 202, 206, 0.8),
+  -12px 0 15px -4px rgba(192, 202, 206, 0.8);
+  .heading a {
     font-size: 13px;
     font-weight: bolder;
     color: gray;
     text-transform: uppercase;
   }
-  .heading a:hover{
+  .heading a:hover {
     text-decoration: none;
   }
   .link:hover {
     text-decoration: none;
   }
-  .link{
+  .link {
     color: #48484D;
   }
-  md-list-item i.fa-folder {
-    color: #C0CACE;
+  md-list-item i {
+    color: #3ccfcf;
+    margin-top: -2px;
   }
+}
+
+.folder-new {
+  md-content {
+    width: 500px;
+    background-color: #FFFFFF;
+  }
+}
+.heading-info{
+  padding: 20px 0;
+  border-bottom: 5px solid $accent-color;
 }
