--- a/app/assets/javascripts/views/subjects/show.html.erb
+++ b/app/assets/javascripts/views/subjects/show.html.erb
@@ -1,28 +1,70 @@
-<h2><%= I18n.t "subjects.there_are" %> {{ data.length }} <%= I18n.t "subjects.word" %></h2>
-<hr>
-<div class="row">
-  <div class="col-sm-9 custom-list">
-    <md-list flex>
-      <md-list-item class="md-3-line custom-list-item" ng-repeat="item in data"
-                    ng-click="show(item)">
-        <div class="md-list-item-text" layout="column">
-          <div class="row">
-            <div class="col-sm-4 word"><%= I18n.t "subjects.word_content" %></div>
-            <div class="col-sm-4 border-left word"><%= I18n.t "subjects.word_definition" %></div>
-            <div class="col-sm-4 action">
-              <md-button class="md-icon-button md-mini pull-right">
-                <i class="fa fa-fw fa-pencil"></i>
-              </md-button>
-              <md-button class="md-icon-button md-mini pull-right">
-                <i class="fa fa-fw fa-volume-up"></i>
-              </md-button>
-              <md-button class="md-icon-button md-mini pull-right">
-                <i class="fa fa-fw fa-star-o"></i>
-              </md-button>
+<div class="ltt-subject">
+  <h2><%= I18n.t "subjects.there_are" %> {{ data.length }} <%= I18n.t "subjects.word" %></h2>
+  <hr>
+  <div class="row">
+    <div class="col-lg-3 col-md-4 col-xs-6 col-sm-4">
+      <md-card md-theme="{{ showDarkTheme ? 'dark-grey' : 'default' }}" md-theme-watch
+        ng-click="flash_card()">
+        <md-card-title>
+          <md-card-title-text>
+            <span class="md-headline">
+              <i class="fa fa-window-restore" aria-hidden="true"></i>
+            </span>
+
+            <span class="md-subhead"><%= I18n.t "subjects.flash_card" %></span>
+          </md-card-title-text>
+        </md-card-title>
+      </md-card>
+    </div>
+    <div class="col-lg-3 col-md-4 col-xs-6 col-sm-4">
+      <md-card md-theme="{{ showDarkTheme ? 'dark-grey' : 'default' }}" md-theme-watch>
+        <md-card-title>
+          <md-card-title-text>
+          <span class="md-headline">
+            <i class="fa fa-file-text" aria-hidden="true"></i>
+          </span>
+            <span class="md-subhead"><%= I18n.t "subjects.test" %></span>
+          </md-card-title-text>
+        </md-card-title>
+      </md-card>
+    </div>
+    <div class="col-lg-3 col-md-4 col-xs-6 col-sm-4">
+      <md-card md-theme="{{ showDarkTheme ? 'dark-grey' : 'default' }}" md-theme-watch>
+        <md-card-title>
+          <md-card-title-text>
+          <span class="md-headline">
+            <i class="fa fa-object-ungroup" aria-hidden="true"></i>
+          </span>
+            <span class="md-subhead"><%= I18n.t "subjects.match" %></span>
+          </md-card-title-text>
+        </md-card-title>
+      </md-card>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-9 custom-list">
+      <md-list flex>
+        <md-list-item class="md-3-line custom-list-item" ng-repeat="item in data"
+                      ng-click="show(item)">
+          <div class="md-list-item-text" layout="column">
+            <div class="row">
+              <div class="col-sm-4 word"><%= I18n.t "subjects.word_content" %></div>
+              <div class="col-sm-4 border-left word"><%= I18n.t "subjects.word_definition" %></div>
+              <div class="col-sm-4 action">
+                <md-button class="md-icon-button md-mini pull-right">
+                  <i class="fa fa-fw fa-pencil"></i>
+                </md-button>
+                <md-button class="md-icon-button md-mini pull-right">
+                  <i class="fa fa-fw fa-volume-up"></i>
+                </md-button>
+                <md-button class="md-icon-button md-mini pull-right">
+                  <i class="fa fa-fw fa-star-o"></i>
+                </md-button>
+              </div>
             </div>
           </div>
-        </div>
-      </md-list-item>
-    </md-list>
+        </md-list-item>
+      </md-list>
+    </div>
   </div>
 </div>
