load words more

--- a/app/assets/javascripts/views/subjects/show.html.erb
+++ b/app/assets/javascripts/views/subjects/show.html.erb
@@ -70,4 +70,7 @@
       </md-list>
     </div>
   </div>
+  <md-button class="md-raised md-primary" ng-click="loadMore()">
+    <%= I18n.t "subjects.load_more" %>
+  </md-button>
 </div>
