--- a/app/assets/stylesheets/subject.scss
+++ b/app/assets/stylesheets/subject.scss
@@ -1,15 +1,20 @@
+$primary-color: #4257B2;
+$secondary-color: #FFFFFF;
+$accent-color: #FFCD1F;
+
 .ltt-subject {
   .row {
     .md-headline {
       font-size: 80px;
       line-height: 80px;
       margin: 0 auto;
-      color: blue;
+      color: #3ccfcf;
     }
 
     .md-subhead {
+      transition: 0.25s;
       text-align: center;
-      color: blue;
+      color: #3ccfcf;
       font-weight: 700;
       font-size: 1.875rem;
       bottom: 1.25rem;
@@ -46,5 +51,15 @@
   .front p, .back p {
     margin-top: 25%;
     font-size: 3em;
+  }
+  .button {
+    top: 150px;
+  }
+  .sidebar{
+    min-height: 80vh!important;
+  }
+
+  md-card:hover .md-subhead{
+    color: $accent-color;
   }
 }
